[package]
name = "dynstore"
version = "0.1.0"
edition = "2021"
description = "A container for arbitrary castable objects"
license = "MIT"
documentation = "docs.rs/dynstore"
repository = "github.com/bch29/dynstore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory = { version = "0.2.*", optional = true }
once_cell = "*"

[features]
inventory = ["dep:inventory"]
