[package]
name = "dynstore"
version = "0.1.2"
edition = "2021"
description = "A container for arbitrary castable objects"
license = "MIT"
documentation = "https://docs.rs/dynstore"
repository = "https://github.com/bch29/dynstore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inventory = { version = "0.2.*", optional = true }
once_cell = "1.*"

[features]
inventory = ["dep:inventory"]

[package.metadata.docs.rs]
features = ["inventory"]
